display archive view and record links; fixed only the first three levels being shown; refs #19860